--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,8 +5,10 @@
 </head>
 <body>
     <% for(key in urls) { %>
-    <li><%= key %> - <%= urls[key] %></li>
+    	<form action="/urls/<%=key%>" method="post">
+    		<li><%=key%> - <%=urls[key]%> <a href="/urls/<%=key%>">edit</a> <input type="submit" value="delete"></li>
+    	</form>
     <% } %> 
-    <a href="dud">Shorten New Url</a>
+    <a href="/urls/new">Shorten New Url</a>
 </body>
 </html>
