--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <% include ./partials/_header %>
+  <title>TinyApp</title>
 </head>
 <body>
-    <% for(key in urls) { %>
-    	<form action="/urls/<%=key%>" method="post">
-    		<li><%=key%> - <%=urls[key]%> <a href="/urls/<%=key%>">edit</a> <input type="submit" value="delete"></li>
-    	</form>
-    <% } %> 
-    <a href="/urls/new">Shorten New Url</a>
+  <% include ./partials/_header.ejs %>
+  <% if(Object.keys(urls).length > 0) { %>
+		<% for(key in urls) { %>
+		  <form action="/urls/<%=key%>/delete" method="post">
+			<li><%=key%> - <%=urls[key]%> <a href="/urls/<%=key%>">edit</a> <input type="submit" value="delete"></li>
+		  </form>
+		<% } %> 
+  <% } else { %>
+  	<p> You don't have any urls. Click the link below to begin. </p>
+  <% } %>
+	<a href="/urls/new">Shorten New Url</a>
 </body>
 </html>
