--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,7 @@
 <header>
-  <div style="display: table; height: 20px">
-  	<% if(typeof user !== 'undefined') { %><div style="display: table-cell; float: right"><%=user.email%> <form action="/logout" method="post"><input type="submit" value="logout"></form></div>
-  	<% } else if (typeof links !== 'undefined'){ %><div style="display: table-cell; float: right"><a href="/login">login</a><a href="/register">sign up</a></div><% } %>
-  <div>
- 	 <div style="clear: right">
+  <% if(typeof user !== 'undefined') { %><div style="float: right"><%=user.email%> <form action="/logout" method="post"><input type="submit" value="logout"></form></div>
+  <% } else if (typeof links !== 'undefined'){ %><div style="display: table-cell; float: right"><a href="/login">login</a><a href="/register">sign up</a></div><% } %>
+ 	<div style="clear: right">
  		<center>
     	<h2>Tiny URL (ver 1.0.0)</h2>
 	  </center>
