--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -3,11 +3,12 @@
 <head>
   <title>TinyApp</title>
 </head>
-  <body style="font-size:20px; padding:50px;">
-    <form action="/urls" method="POST" style="margin:150px;">
+	<% include ./partials/_header.ejs %>
+	<center>
+		<form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
-  </body>
+	</center>
 </html>
