--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -5,10 +5,11 @@
 </head>
 	<% include ./partials/_header.ejs %>
 	<center>
-		<form action="/urls" method="POST" style="margin:150px;">
+		<form action="/urls" method="POST">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit"><br>
+      <% if(typeof url_empty !== 'undefined') { %><em>url field left empty<% } %>
     </form>
 	</center>
 </html>
