--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,9 @@
 	<% include ./partials/_header.ejs %>
 	<center>
 		<form action="/urls/<%= url_id %>" method="post">
-			<%=url_id%> - <%=longURL%> <input name="updatedURL" type="text" placeholder="http://change.url.here.com"> <input type="submit" value="update">
+			<%=url_id%> - <%=longURL%> 
+			<input name="updatedURL" type="text" placeholder="http://change.url.here.com"> <input type="submit" value="update"><br>
+			<% if(typeof url_empty !== 'undefined') { %><em>url field left empty<% } %>
 		</form>
 	</center>
 </body>
